<resources>
    <string name="app_name">AppOpay Business</string>
    <string name="you">You</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_intro"><![CDATA[Buy Sell, Pay & Chat.\nAccepted at 52,000,000 Merchants Globally]]></string>
    <string name="info_select_language">SELECT LANGUAGE</string>
    <string name="permission_desc_storage">AppOpay Business Need Storage Access Permission to work properly.</string>
    <string name="info_split1"> Tap</string>
    <string name="info_split2"> Agree and Continue</string>
    <string name="info_split3"> to accept the</string>
    <string name="info_split4"> Terms  and Condition </string>
    <string name="info_accept_intro"><![CDATA[ACCEPT T&C]]></string>
    <string name="info_select_your_app_language">Select Your App Language</string>
    <string name="info_apply">Apply</string>
    <string name="info_term_condition">Please Accept Term and Conditions.</string>
    <string name="info_english">English</string>
    <string name="info_spanish">Spanish</string>
    <string name="info_hello">Hello</string>
    <string name="info_sign_into_your_account">Sign into your Account</string>
    <string name="info_hint_mobile">Mobile</string>
    <string name="info_forgot_password">Forgot password?</string>
    <string name="info_not_member">Not a Member Yet?</string>
    <string name="info_register_now">Register Now.</string>
    <string name="info_sign_in">Sign In</string>
    <string name="info_hint_password">Enter Password</string>
    <string name="otp_sending">Sending OTP</string>
    <string name="otp_verifying">Verifying OTP</string>
    <string name="otp_verifying_msg">Verifying OTP…</string>
    <string name="otp_sending_msg">To your phone number</string>
    <string name="logging_in">Logging you in!</string>
    <string name="error_detail">Something went wrong</string>
    <string name="error_create_user">Something went wrong, unable to create user.</string>
    <string name="resend">Resend Otp</string>
    <string name="phone_number">Mobile Number</string>
    <string name="fname">First Name</string>
    <string name="enter_first_your_name">Enter Your First Name</string>
    <string name="lname">Last Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="contact">Contact</string>
    <string name="document">Document</string>
    <string name="image">Image</string>
    <string name="location">Location</string>
    <string name="none_text">Text</string>
    <string name="none_typing">Typing</string>
    <string name="recording">Recording</string>
    <string name="notification">Notification</string>
    <string name="none">None</string>
    <string name="invite_short">invite</string>
    <string name="invite_to">Invite to</string>
    <string name="hey_there">Hey there! I am using</string>
    <string name="download_now">Download now</string>
    <string name="file_not_found">File not found! File is either Moved, Deleted or Renamed.</string>
    <string name="empty_text_chat_list">Your chats appear here. Start chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here. Start chatting by selecting a group.</string>
    <string name="empty_log_call_list">Your call logs appear here. Start by selecting a user.</string>
    <string name="empty_contact_list_for_group">You don\'t have sufficient friends to be in a group</string>
    <string name="participants_0">Participants (0)</string>
    <string name="add_more">+ Add more</string>
    <string name="get_image_title">Get image from</string>
    <string name="get_image_camera">Camera</string>
    <string name="get_image_gallery">Gallery</string>
    <string name="validation_req_participant">No participants selected</string>
    <string name="validation_req_name">User name can\'t be empty</string>
    <string name="validation_req_description">Give this group a short description</string>
    <string name="err_upload_image">Unable to upload image.</string>
    <string name="group_created">Group created</string>
    <string name="error_request">Unable to process request at this time</string>
    <string name="back">Back</string>
    <string name="type_your_message">Type your message</string>
    <string name="just_moment">Just a moment..</string>
    <string name="voice_calling">Voice Calling</string>
    <string name="video_calling">Video Calling</string>
    <string name="video_calling_in">Incoming video call</string>
    <string name="voice_calling_in">Incoming voice call</string>
    <string name="permission_mic">This application needs permission to use your microphone to function properly.</string>
    <string name="gave_miss">Gave you a miss call</string>
    <string name="err_upload_img">Unable to upload image.</string>
    <string name="slide_cancel">(Slide left to cancel)</string>
    <string name="hold_record">Hold down to record.</string>
    <string name="file_na">File unavailable</string>
    <string name="downloading">Downloading</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="message_copied">Messages copied</string>
    <string name="delete_msg_title">Delete messages</string>
    <string name="delete_msg_message">Continue deleting selected messages?</string>
    <string name="removed_from_group">You no longer belong to this group.</string>
    <string name="status">Status</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="no_members">No new members to add</string>
    <string name="add_member_title">Add member(s)</string>
    <string name="member_added">Members added</string>
    <string name="dial_permission">To dial number automatically for you we need this permission</string>
    <string name="remove_user_title">Remove user</string>
    <string name="member_removed">Member Removed</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="add_to_contact">Add to contact</string>
    <string name="close">Close</string>
    <string name="uploading">Uploading</string>
    <string name="upload_fail">Uploading failed</string>
    <string name="up_and_send">Upload And Send</string>
    <string name="voice_message">Voice Message</string>
    <string name="copyright">Copyright &#169;. All Rights Reserved.</string>
    <string name="select_country_code">Please select country code</string>
    <string name="code"><u>code</u></string>
    <string name="setting_error">Your login details does not exists, please login to change your password.</string>
    <string name="profile_update_error">Your login details does not exists, please login to update your profile.</string>
    <string name="profile_update_error1">You have not update your profile , please update your profile.</string>
    <string name="account_see_error">Your login details does not exists, please login to perform any action.</string>
    <string name="recharge_payment_mode">Please select payment mode</string>
    <string name="recharge_payment_balance_error">Your account doesn\'t have enough balance to buy topup</string>
    <string name="recharge_partial_pay1">You are about to pay </string>
    <string name="recharge_partial_pay2"> purchase of topup . Please confirm ?</string>
    <string name="gift_card__pay">purchase of Gift Card . Please confirm ?</string>
    <string name="carddetails_card_title">Card details</string>
    <string name="carddetails_subhead">Please Verify your card information before submission.</string>
    <string name="carddetails_card_number_field_label">Card number</string>
    <string name="carddetails_card_number_field_label1">Account number</string>
    <string name="carddetails_cardholder_field_label">Cardholder name</string>
    <string name="carddetails_cardholder_field_label1">Account Holder name</string>
    <string name="carddetails_expiry_date_field_label">Expiry date</string>
    <string name="carddetails_cvv_label">CVV</string>
    <string name="trans_note">Note</string>
    <string name="trans_info">Length of transaction pin should be  six digits.</string>
    <string name="screen_note">Note</string>
    <string name="screen_info">Length of screen lock pin should be  four digits.</string>
    <string name="update_note">Note</string>
    <string name="update_note_info">Please verify your details before updating the profile,Transaction pin should be 6 digits numeric and Screen lock pin should be 4 digits numeric</string>
    <string name="required_filled">"Please fill all required filled "</string>
    <string name="merchant_inactive_error">Merchant is Inactive ,Please contact admin</string>
    <string name="merchant_same_account">From and To account cannot be the same</string>
    <string name="merchant_balance_error">Your account doesn\'t have enough balance to transfer</string>
    <string name="merchant_partial_pay1">You are about to pay </string>
    <string name="merchant_partial_pay2">  Please confirm ?</string>
    <string name="wallet_header">Transfer Money</string>
    <string name="mobile_no_error">Mobile No. Error</string>
    <string name="mobile_no_error_info">You  cannot search your own registered mobile number.</string>
    <string name="info_old_transaction_pin">Enter transaction pin.</string>
    <string name="info_new_transaction_pin">Confirm transaction pin.</string>
    <string name="info_transaction_pin_length">Pin should be 6 digit length</string>
    <string name="info_old_password">Enter old password.</string>
    <string name="info_new_password">Create new password</string>
    <string name="info_confirm_your_password">Confirm your password</string>
    <string name="info_mismatch">mismatch</string>
    <string name="info_security_question1">Enter security question 1</string>
    <string name="info_security_answer1">Enter security answer 1</string>
    <string name="info_security_question2">Enter security question 2</string>
    <string name="info_security_answer2">Enter security answer 2</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="info_receiver_mobile_number">Enter receiver mobile number</string>
    <string name="info_valid_mobile_number">Enter valid mobile number</string>
    <string name="info_phone_top_up">Amount to Top-Up</string>
    <string name="info_select_dob">please select date of birth</string>
    <string name="search_info_transfer_money">Search by Mobile number for amount transfer</string>
    <string name="search_info_request_money">Search by Mobile number for request money</string>
    <string name="sign_in">Sign In</string>
    <string name="default_notification_channel_id">notification</string>
    <string name="info_select_bank">Please select bank</string>
    <string name="info_select_account_type">Please select account type</string>
    <string name="info_account_holder_name">Enter account holder name</string>
    <string name="info_from_account">From Account</string>
    <string name="info_amount_to_be_transfer">Amount to Transfer</string>
    <string name="info_hint_enter_amount">Enter Amount</string>
    <string name="info_hint_conversion_rate">Conversion Rate</string>
    <string name="info_hint_amount_to_be_credited">Amount to be credited</string>
    <string name="info_select_from_account">Select From Account</string>
    <string name="info_pay_now">Pay Now</string>
</resources>