<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_rounded"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/tvCardMerchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_rounded2"
                app:contentPadding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivMerchant"
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/user_chat" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_toEndOf="@+id/ivMerchant"
                        android:orientation="vertical">

                        <com.stuffrs.newappopay.stuffers_business.views.MyTextViewBold
                            android:id="@+id/tvHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                            android:id="@+id/tvCodeMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:textSize="14sp" />

                        <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                            android:textStyle="bold"
                            android:id="@+id/tvEmialId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                        <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                            android:id="@+id/tvIndex5"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="A/c No "

                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                                android:textStyle="bold"
                                android:id="@+id/tvAccountNos"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivUser"
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/user_chat" />
                <LinearLayout
                    android:layout_toRightOf="@+id/ivUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/edit_text_rounded2"
                    android:orientation="vertical">

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/info_from_account"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:id="@+id/tvFromAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:hint="@string/info_select_from_account"
                        android:minHeight="45dp"
                        android:paddingLeft="8dp" />

                </LinearLayout>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/grey_light_secondary" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/edit_text_rounded2"
                    android:orientation="vertical">

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/info_amount_to_be_transfer"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.stuffrs.newappopay.stuffers_business.views.MyEditText
                        android:id="@+id/edAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@null"
                        android:digits="0123456789."
                        android:drawableLeft="@drawable/ic_attach_money_recharge"
                        android:gravity="center_vertical"
                        android:hint="@string/info_hint_enter_amount"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:inputType="numberDecimal"
                        android:minHeight="45dp"
                        android:paddingLeft="8dp"
                        />


                </LinearLayout>

                <View
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/grey_light_secondary" />

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/edit_text_rounded2"
                    android:orientation="horizontal">

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:hint="@string/info_hint_conversion_rate"
                        android:minHeight="45dp"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:id="@+id/tvConversionRates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:hint="0.0"
                        android:minHeight="45dp"
                        android:paddingLeft="8dp" />

                </LinearLayout>

                <View
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/grey_light_secondary" />

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/edit_text_rounded2"
                    android:orientation="horizontal">

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/info_hint_amount_to_be_credited"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:id="@+id/tvAmountCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_vertical"
                        android:hint="credited amount"
                        android:minHeight="45dp"
                        android:paddingLeft="8dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/blue_rounded_bg"
                    android:gravity="center"
                    android:minWidth="200dp"
                    android:minHeight="45dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/icon_transfer_money" />

                    <com.stuffrs.newappopay.stuffers_business.views.MyTextView
                        android:id="@+id/btnTransfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/info_pay_now"
                        android:textAllCaps="true"

                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>






            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/common_bottom_layout"/>


</LinearLayout>


